# Arc

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  arc.example.json  arc.yaml.example  install.sh
.github/workflows/: release.yml
benchmark/: README.md
benchmark/backends/: http_ok_backend.py
benchmark/scripts/: parse_h2load.py  parse_wrk.py  run_h1_wrk_vs_nginx.sh  run_h2_h2load_vs_nginx.sh
benchmark/templates/: result_comparison.md  result_schema.json
crates/arc-acme/: Cargo.toml
crates/arc-acme/src/: lib.rs
crates/arc-cli/: Cargo.toml
crates/arc-common/: Cargo.toml
crates/arc-compression/: Cargo.toml
crates/arc-compression/src/: accept.rs  adaptive.rs  chunked.rs  decision.rs  lib.rs  magic.rs  mime.rs  pool.rs  sse.rs  util.rs
crates/arc-compression/src/codec/: brotli.rs  gzip.rs  mod.rs  zstd.rs
crates/arc-config/: Cargo.toml
crates/arc-config/src/: forward_policies.rs  lib.rs  policy_compression.rs  policy_mirror.rs  policy_timeout.rs  route_rules.rs
crates/arc-core/: Cargo.toml
crates/arc-core/src/: compiled.rs  config.rs  control.rs  lib.rs  mutations.rs  policy_mirror.rs  policy_timeout.rs  rate_limit.rs  router.rs  telemetry.rs  trace.rs  upstream.rs
crates/arc-core/src/plugins/: mod.rs  rhai.rs  wasm.rs
crates/arc-daemon/: Cargo.toml
crates/arc-daemon/src/: main.rs
crates/arc-gateway/: Cargo.toml
crates/arc-gateway/src/: acme.rs  cluster_circuit.rs  control.rs  downstream_tls.rs  main.rs  mirror_dispatcher.rs  timeout_tier.rs  tls.rs  worker.rs
crates/arc-gateway/src/gossip/: bus.rs  config.rs  crdt.rs  message.rs  mod.rs  msgpack.rs  rng.rs
crates/arc-gateway/src/h2/: bridge.rs  buf.rs  down.rs  driver.rs  flow.rs  key.rs  mod.rs  pool.rs  stream_set.rs  tests.rs  timewheel.rs  tx.rs  up.rs
crates/arc-global-rate-limit/: Cargo.toml
crates/arc-global-rate-limit/src/: lib.rs
crates/arc-logging/: Cargo.toml
crates/arc-logging/src/: config.rs  escape.rs  lib.rs  metrics.rs  record.rs  redact.rs  ring.rs  runtime.rs  trace.rs  util.rs  writer.rs
crates/arc-net/: Cargo.toml
crates/arc-observability/: Cargo.toml
crates/arc-observability/src/: lib.rs
crates/arc-plugins/: Cargo.toml
crates/arc-plugins/src/: lib.rs
crates/arc-proto-h2/: Cargo.toml
crates/arc-proto-http1/: Cargo.toml
crates/arc-rate-limit/: Cargo.toml
crates/arc-router/: Cargo.toml
crates/arc-xdp/: Cargo.toml
crates/arc-xdp-common/: Cargo.toml
crates/arc-xdp-common/src/: lib.rs
crates/arc-xdp-userspace/: Cargo.toml
crates/arc-xdp-userspace/src/: bpf.rs  config.rs  l7.rs  lib.rs  manager.rs  system_tuner.rs  zerocopy.rs
crates/arc-xdp/.cargo/: config.toml
crates/arc-xdp/src/: lib.rs  main.rs  main_full.rs
deploy/: arc-gateway.service  install-systemd.sh
deploy/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secret.yaml  service.yaml
docs/: api.md  architecture.md  benchmarks.md  components.md  configuration.md  getting-started.md  security.md
tmp/: acme_hot_reload_check.sh  acme_pebble_full_run.sh  acme_pebble_full_run2.sh  acme_pebble_full_run3.sh  acme_pebble_full_run4.sh  acme_pebble_gateway_run.sh  acme_pebble_run.sh  acme_route_probe.sh  acme_smoke_run.sh  cargo_gateway_from_1k.toml  check_mtls_backend.sh  claude_docs_output.json  claude_docs_prompt.txt  debug_tls_c128.sh  deny_plugin.rs  deny_plugin.wasm  downstream_tls_from_1k.rs  extract_from_1md.py  global_rl_loadgen.py  gossip_probe_live.sh  grl_cap_probe.sh  grl_inmem_probe.sh  grl_probe.sh  grl_redis_smoke.json  h2_manual_probe.sh  main_from_1k.rs  no_tls_smoke.json  noop_plugin.rs  noop_plugin.wasm  p1_blocks_extract.txt  pebble_only_run.sh  perf_arc.json  perf_arc_c128.json  perf_arc_c256.json  perf_arc_c32.json  perf_backend.py  perf_bench.py  perf_direct.json  perf_direct_c128.json  perf_pids.json  (+53 more)
tmp/acme_pebble_full/: arc.json  arc_bad_ca.json  ca.key  ca.pem  ca.srl  pebble-config.local.json  pebble-root.pem  pebble_srv.csr  pebble_srv.key  pebble_srv.pem  pebble_tls_cert.pem  pebble_tls_key.pem
tmp/acme_smoke/: acme_cert.pem  arc_acme_smoke.json  arc_acme_smoke_route.json  static_cert.pem  static_key.pem
tmp/acme_smoke_pebble/: acme_key.pem  arc_acme_pebble.json
tmp/cluster_circuit_probe/: a_codes.txt  arc_a.json  arc_b.json  summary.json
tmp/config_format_runtime/: arc.json  arc.toml  arc.yaml
tmp/error_pages_probe/: arc_error_pages.json  backend.py  case1.body  case2.head  case3.body  case5.body  err5xx.html  error_service.py  result.txt
tmp/gossip_two_node/: backend.py  members_a_start.json  members_b.json  members_b_after_kill.json  members_b_start.json  node_a.json  node_a_v2.json  node_b.json  result.txt  stats_b_after.json
tmp/gossip_two_node_probe/: backend.py
tmp/grl_cap_probe/: arc.json  cap.json
tmp/grl_dist_probe/: a.json  b.json  redis_keys.txt  s1.json
tmp/grl_dist_redis/: arc_a.json  arc_b.json  backend.py  scenario1_uniform.json  scenario2_single_burst.json  scenario3_failover_raw.json  scenario3_redis_events.txt  summary.json
tmp/grl_inmem_probe/: arc.json  backend.py  inmem.json
tmp/h2_feature/: arc_h2_features.json
tmp/h2_finish_smoke/: arc_h2_finish.json  hdr_resp.body  hdr_resp.hdr  sni_fallback.hdr  sni_hit.body  sni_hit.hdr
tmp/h2_x_verify_root/: x
tmp/p1_smoke/: arc.json  b1.py  b2.py  result.txt  run_p1_smoke.sh
tmp/rule_validate/: arc_rules_validate.json  backend.py  m1_forward.body  m1_forward.hdr  m1_get_host.body  m1_get_host.hdr  m1_host_miss.hdr  m1_post_host.body  m1_post_host.hdr  m2_priority.body  m2_priority.hdr  m3_h1_respond.body  m3_h1_respond.hdr  m3_h2_respond.body  m3_h2_respond.hdr  m4_ambiguous.hdr  result.txt
tmp/smoke_mirror/: arc_mirror.json  backend.py
tmp/smoke_mirror2/: arc.json  backend.py
tmp/smoke_timeout_tier/: arc_timeout.json
tmp/tls_real_backend/: arc.json  backend.py  cert.pem  key.pem
tmp/tls_smoke/: arc_tls_reload.json  arc_tls_smoke.json  cert.pem  key.pem  run_hot_reload.sh  run_smoke.sh
tmp/tls_state_check/: arc.json  cert.pem  key.pem
(+368 files in other folders)
