[package]
name = "arc-acme"
version.workspace = true
edition = "2021"
description = "ACME certificate management module for Arc (rustls-acme based)"
license = "MIT OR Apache-2.0"

[dependencies]
arc-swap = "1.7.1"
async-trait = "0.1.86"
base64 = "0.22.1"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
dashmap = "5.5.3"
futures = "0.3.31"
hkdf = "0.12.4"
pem = "3.0.4"
ring = "0.17.8"
rustls-acme = { version = "0.15.1", default-features = false, features = ["ring", "webpki-roots"] }
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "time", "sync", "process", "net", "io-util"] }
x509-parser = "0.16.0"
