[package]
name = "arc-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
schemars.workspace = true
humantime-serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
http.workspace = true
matchit.workspace = true
regex.workspace = true
ahash.workspace = true
arc-swap.workspace = true
once_cell.workspace = true
uuid.workspace = true

tokio.workspace = true
tracing.workspace = true
prometheus.workspace = true

# Optional plugin engines
rhai = { version = "1.20", default-features = false, features = ["std"] }
wasmtime = { version = "18", optional = true }

[features]
default = []
wasm = ["dep:wasmtime"]
