[package]
name = "arc-xdp-common"
version.workspace = true
edition = "2021"
license = "Dual MIT/GPL"
publish = false

[features]
default = []
# 用户态：实现 aya::Pod
user = ["dep:aya"]
# eBPF 内核态：实现 aya_ebpf::Pod
bpf = ["dep:aya-ebpf"]

[dependencies]
aya = { version = "0.13.1", optional = true }
aya-ebpf = { version = "0.1.1", optional = true }

[lib]
path = "src/lib.rs"
